customtests/tests/expected/assignpath1.err
tests/assignpath1.scala:24: error: Field u1 cannot be written through a @readonly reference
	rp.u1 = up  // should error
           ^
tests/assignpath1.scala:25: error: Field m1 cannot be written through a @readonly reference
	rp.m1 = up  // should error
           ^
tests/assignpath1.scala:26: error: Field r1 cannot be written through a @readonly reference
	rp.r1 = up  // should error
           ^
three errors found
